--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -24,8 +24,8 @@
 .nav-links a:hover,
 .nav-links a:active,
 .nav-links a.active {
-  background: #0309bb;
-  border-color: #292929;
+  background: #2062e4;
+  border-color: #2062e4;
   color: white;
   border-radius: 6px;
 }
