--- a/src/shared/components/Navigation/MainHeader.css
+++ b/src/shared/components/Navigation/MainHeader.css
@@ -6,8 +6,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: #f94bdf;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
+  background: var(--secondary-color);
+  /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26); */
   padding: 0 1rem;
   z-index: 5;
 }
