--- a/frontend/src/pages/AuthPage.css
+++ b/frontend/src/pages/AuthPage.css
@@ -33,11 +33,6 @@
     flex-direction: column;
     align-items: center;
   }
-  
-  .form-container div {
-    margin: 8px 0;
-    display: flex;
-  }
 
   .form-container-editor {
     display: flex;
@@ -52,8 +47,11 @@
   }
   
   .form-row {
+    margin-top: 8px;
     justify-content: center;
     padding: 1% 0 4% 0;
+    display: flex;
+    flex-direction: column;
   }
 
   .form-row-editor {
